@@ -6,6 +6,10 @@
           1         2         3         4         5         6         7
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
 
+RH-2011-03-14-1: Bugfix:      free()-hook for glibc is also needed in our 
+                              jemalloc library
+                              (merged from SH-2010-01-05-1)
+
 RH-2011-03-14-0: Bugfix:      rerun of a tightly integrated parallel job crashes
                               qmaster after restart
                               (merged from JG-2009-12-28-0)
